# w5n-rope

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.cpp  emoji.cpp
include/: Rope.hpp
include/w5n/: Rope.hpp
src/: CMakeLists.txt  Rope.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: RopeTest.cpp
